--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,16 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
+// plugin: 'com.google.gms.google-services'
 buildscript {
-    
+
     repositories {
         google()
         jcenter()
     }
+
     dependencies {
+        classpath 'com.google.gms:google-services:3.1.0'
         classpath 'com.android.tools.build:gradle:3.2.1'
+     //   compile 'com.google.android.gms:play-services-auth:16.0.1'
         
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -19,9 +22,12 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url "https://maven.google.com" }
     }
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+//apply plugin: 'com.android.application'
+
