Добавил галерею фото и видео в заметку; кастомизировал кластер; сделал слой заметки прозрачным; добавил шаблон для просмотра одиночного маркера

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
     implementation 'com.squareup.okhttp:okhttp-urlconnection:2.7.5'
     implementation 'com.squareup.okhttp:okhttp:2.7.5'
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
 }
