--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,15 +23,13 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".LoginActivity"
-            android:label="@string/title_activity_login"></activity>
+            android:label="@string/title_activity_login" />
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main" />
-        <activity android:name=".Note"
-            android:theme="@style/AppTheme.MyTransparent"
-            >
-
-        </activity>
+        <activity
+            android:name=".Note"
+            android:theme="@style/AppTheme.MyTransparent"></activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -47,19 +45,19 @@
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity android:name=".ViewActivity" />
         <activity android:name=".StartActivity" />
         <activity
             android:name=".HelpActivity"
             android:label="@string/title_activity_help" />
+        <activity   android:name=".MarkerPreview"
+                    android:theme="@style/AppTheme.MyTransparent"></activity>
     </application>
 
 </manifest>
