--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,7 +59,11 @@
         <activity
             android:name=".MarkerPreview"
             android:theme="@style/AppTheme.MyTransparent" />
-        <activity android:name=".FullViewOfThePostActivity"></activity>
+        <activity android:name=".FullViewOfThePostActivity"
+            android:theme="@style/AppTheme.MyTransparent"/>
+        <activity android:name=".SettingMenuForFullView"
+            android:theme="@style/AppTheme.MyTransparent">
+        </activity>
     </application>
 
 </manifest>
