--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,10 @@
         <activity
             android:name=".Note"
             android:theme="@style/AppTheme.MyTransparent" />
+
+        <activity
+            android:name=".EditPost"
+            android:theme="@style/AppTheme.MyTransparent" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
