Добавил вход из preview при нажатии на пустое пространство и такойже выход из тектового меню настроек при полноэкранном отображении заметок

--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Dec 19 23:13:36 EET 2018
+#Sat Dec 22 11:42:59 EET 2018
+ndk.dir=/home/agent00krosh/Android/Sdk/ndk-bundle
 sdk.dir=/home/agent00krosh/Android/Sdk
