Исправил работу с маркерами (кластерами); подправил авторизацию через гугл, логин через ник/почту/телефон + пароль

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,10 +23,13 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".LoginActivity"
-            android:label="@string/title_activity_login" />
-        <activity
-            android:name=".MainActivity"
-            android:label="@string/title_activity_main" />
+            android:label="@string/title_activity_login" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
         <activity
             android:name=".Note"
             android:theme="@style/AppTheme.MyTransparent" />
@@ -48,18 +51,14 @@
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+
         </activity>
-        <activity android:name=".StartActivity" />
+
         <activity
-            android:name=".HelpActivity"
-            android:label="@string/title_activity_help" />
-        <activity
+
             android:name=".MarkerPreview"
             android:theme="@style/AppTheme.MyTransparent" />
+
         <activity
             android:name=".FullViewOfThePostActivity"
             android:theme="@style/AppTheme.MyTransparent" />
