--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-// plugin: 'com.google.gms.google-services'
+//plugin: 'com.google.gms.google-services'
 buildscript {
 
     repositories {
@@ -8,22 +8,19 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.google.gms:google-services:3.1.0'
+        classpath 'com.google.gms:google-services:4.2.0'
         classpath 'com.android.tools.build:gradle:3.2.1'
-
-     //   compile 'com.google.android.gms:play-services-auth:16.0.1'
-        
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
+
 }
 
 allprojects {
     repositories {
+        //    mavenLocal()
         google()
         jcenter()
         maven { url "https://maven.google.com" }
+        // maven { url "https://jitpack.io" }
     }
 }
 
