Добавил верификацию по почте

--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,9 @@ allprojects {
         //    mavenLocal()
         google()
         jcenter()
-        maven { url "https://maven.google.com" }
-        // maven { url "https://jitpack.io" }
+        maven {// url "https://maven.google.com"
+            url "https://maven.fabric.io/public"
+        }
     }
 }
 
