--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.example.first_task_k__r__o__s__h"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -63,6 +63,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-crash:16.2.1'
     implementation 'com.google.firebase:firebase-auth:16.1.0'
     implementation "com.google.firebase:firebase-config:16.1.2"
+    implementation 'com.firebaseui:firebase-ui-auth:1.2.0'
+
     //implementation 'com.google.firebase:firebase-auth:16.1.0:15.0.0'
 }
 
