--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,7 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
+        multiDexEnabled true
 
     }
     buildTypes {
@@ -64,8 +65,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:16.1.0'
     implementation "com.google.firebase:firebase-config:16.1.2"
     implementation 'com.firebaseui:firebase-ui-auth:1.2.0'
+    implementation 'com.facebook.android:facebook-android-sdk:4.39.0'
+    implementation 'com.android.support:multidex:1.0.3'
 
-    //implementation 'com.google.firebase:firebase-auth:16.1.0:15.0.0'
 }
 
 
