--- a/build.gradle
+++ b/build.gradle
@@ -20,8 +20,11 @@ allprojects {
         google()
         jcenter()
         mavenCentral()
-        maven {// url "https://maven.google.com"
+        maven {
             url "https://maven.fabric.io/public"
+        }
+        maven {
+            url "https://maven.google.com"
         }
     }
 }
