--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,20 +16,22 @@
 
     <application
         android:allowBackup="true"
+        android:enabled="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:enabled="true">
-
-        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_application_id"/>
+        android:theme="@style/AppTheme">
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_application_id" />
 
         <activity
             android:name=".Activities.LoginActivity"
             android:label="@string/title_activity_login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -53,9 +55,7 @@
 
         <activity
             android:name=".Activities.MapsActivity"
-            android:label="@string/title_activity_maps" >
-
-        </activity>
+            android:label="@string/title_activity_maps"></activity>
         <activity
             android:name=".Activities.MarkerPreview"
             android:theme="@style/AppTheme.MyTransparent" />
@@ -68,12 +68,8 @@
         <activity android:name=".FullScreenMediaDisplay.FullScreenPhoto" />
         <activity android:name=".FullScreenMediaDisplay.FullScreenVideo" />
         <activity android:name=".FullScreenMediaDisplay.FullScreenGallery" />
-        <activity android:name=".AuxiliaryComponents.PhoneAuthorization">
-
-        </activity>
-        <activity android:name=".AuxiliaryComponents.EmailAuthorization">
-
-        </activity>
+        <activity android:name=".AuxiliaryComponents.PhoneAuthorization"></activity>
+        <activity android:name=".AuxiliaryComponents.EmailAuthorization"></activity>
     </application>
 
 </manifest>
