--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,13 +26,8 @@
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_application_id" />
 
-        <activity
-            android:name=".Activities.LoginActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+        <activity android:name=".Activities.LoginActivity">
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".Activities.Note"
@@ -54,7 +49,7 @@
 
         <activity
             android:name=".Activities.MapsActivity"
-            android:label="@string/title_activity_maps"></activity>
+            android:label="@string/title_activity_maps" />
         <activity
             android:name=".Activities.MarkerPreview"
             android:theme="@style/AppTheme.MyTransparent" />
@@ -67,8 +62,15 @@
         <activity android:name=".FullScreenMediaDisplay.FullScreenPhoto" />
         <activity android:name=".FullScreenMediaDisplay.FullScreenVideo" />
         <activity android:name=".FullScreenMediaDisplay.FullScreenGallery" />
-        <activity android:name=".AuxiliaryComponents.PhoneAuthorization"></activity>
-        <activity android:name=".AuxiliaryComponents.EmailAuthorization"></activity>
+        <activity android:name=".AuxiliaryComponents.PhoneAuthorization" />
+        <activity android:name=".AuxiliaryComponents.EmailAuthorization" />
+        <activity android:name=".StartActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
