--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,10 +64,12 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging:17.3.4'
     implementation 'com.google.firebase:firebase-crash:16.2.1'
     implementation 'com.google.firebase:firebase-auth:16.1.0'
-    implementation "com.google.firebase:firebase-config:16.1.2"
+    implementation "com.google.firebase:firebase-config:16.1.3"
     implementation 'com.firebaseui:firebase-ui-auth:1.2.0'
     implementation 'com.facebook.android:facebook-android-sdk:4.39.0'
     implementation 'com.android.support:multidex:1.0.3'
+    implementation "android.arch.persistence.room:runtime:1.1.1"
+    annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
 
 }
 
